LU-18415 pcc: fix panic when add/remove PCC backends

PCC panic on CSI drvier when add/remove PCC backends on a client
as follows:
RIP: 0010:strlen+0x0/0x20
Call Trace:
pcc_dataset_rule_init [lustre]
pcc_cmd_handle [lustre]
ll_pcc_seq_write [lustre]
vfs_write
ksys_write

There are some bugs in the error handling for PCC setup and
cleanup. This may result in double memory free or list struct
corrupting. Fix it accordingly.

Signed-off-by: Qian Yingjin <qian@ddn.com>
Change-Id: I04d616395c095748aa195df5f2979a85de79dded
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/56824
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Li Xi <lixi@ddn.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>